<resources>
    <string name="app_name">QDMRAQuoteApp</string>
    <string name="textView2Text">Welcome to DMRA Quote App</string>
    <string name="category">QDMRAQuoteApp</string>
    <string name="attribute">QDMRAQuoteApp</string>
    <string name="quote">QDMRAQuoteApp</string>
    <string name="date">QDMRAQuoteApp</string>
    <string name="ref">QDMRAQuoteApp</string>
    <string name="dismiss">QDMRAQuoteApp</string>
    <string name="action_about">QDMRAQuoteApp</string>
    <string name="action_random">QDMRAQuoteApp</string>
    <string name="action_last">QDMRAQuoteApp</string>
    <string name="textView">Text</string>
    <string name="categoryName">Category</string>
    <string name="email">rafiasend@gmail.com</string>
    <string name="password">compscisend</string>

    <string name="aboutTitle">About</string>

    <string name="aboutInfo">This is an application that will display quotes from
        5 different categories: Celebrities, Computer Science, Philosophers Politicians and Writers. \n
        You have the choice between getting a random quote from any category, or getting a random
        quote from a specific category. Each quote is supplied with information such as who the
        quote is attributed to, the link where the quote was taken from and the date it was added
        to the application.

    </string>
    <string name="devs">Developers: Rafia and Denys</string>

    <string-array name="category_array">
        <item>Celebrities</item>
        <item>Computer Science</item>
        <item>Philosophers</item>
        <item>Politicians</item>
        <item>Writers</item>

    </string-array>


</resources>
